force-app/main/default/objects/pro_Target__c/fields/pro_Achieved_Target_Count__c.field-meta.xml
<CustomField>
    <fullName>pro_Achieved_Target_Count__c</fullName>
    <description>A count of all the Asset Target Audit records linked to this target through the Target Forecast field.</description>
    <label>Achieved Target Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>