force-app/main/default/objects/pro_Target__c/fields/pro_End_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_End_Date__c</fullName>
    <inlineHelpText>Roll Offs End Date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>