force-app/main/default/objects/pro_Target__c/fields/pro_Forecast_Target_Count2__c.field-meta.xml
<CustomField>
    <fullName>pro_Forecast_Target_Count2__c</fullName>
    <description>A count of all the Asset Target Audit records linked to this target through the Target Forecast field. Excludes any Asset Target Audit record whose Progress field value is Target Cancelled or Moved To Trading</description>
    <label>Forecast Target Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>