force-app/main/default/objects/pro_Target__c/fields/pro_LOI_d__c.field-meta.xml
<CustomField>
    <fullName>pro_LOI_d__c</fullName>
    <inlineHelpText>These are the Assets where contract end date falls in the period of the Target.</inlineHelpText>
    <label>Roll Offs LOI&#39;d</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>