force-app/main/default/objects/pro_Target__c/fields/pro_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_Start_Date__c</fullName>
    <inlineHelpText>Roll Offs Start Date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>