force-app/main/default/objects/pro_Target__c/fields/pro_Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>pro_Target_Amount__c</fullName>
    <label>Run Rate Target Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>