force-app/main/default/objects/pro_Target__c/fields/pro_Target_Year__c.field-meta.xml
<CustomField>
    <fullName>pro_Target_Year__c</fullName>
    <formula>TEXT(YEAR( pro_Start_Date__c ))</formula>
    <label>Target Year</label>
    <type>Text</type>
</CustomField>