force-app/main/default/objects/pro_Target__c/fields/Pro_trigger_update__c.field-meta.xml
<CustomField>
    <fullName>Pro_trigger_update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>trigger update</label>
    <type>Checkbox</type>
</CustomField>