force-app/main/default/objects/pro_Target__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>pro_Start_Date__c</columns>
    <columns>pro_Target_Amount__c</columns>
    <columns>pro_Roll_Offs__c</columns>
    <columns>pro_LOI_d__c</columns>
    <columns>Pro_All_LOI_s__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pro_Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2026</value>
    </filters>
    <filters>
        <field>pro_End_Date__c</field>
        <operation>lessThan</operation>
        <value>1/1/2027</value>
    </filters>
    <label>All</label>
</ListView>