force-app/main/default/objects/pro_Target__c/listViews/pro_X2026_Targets.listView-meta.xml
<ListView>
    <fullName>pro_X2026_Targets</fullName>
    <columns>NAME</columns>
    <columns>pro_Start_Date__c</columns>
    <columns>pro_Target_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>25</value>
    </filters>
    <label>2025 Targets</label>
</ListView>